# Pong-Break

./: CMakeLists.txt  ReadMe.txt
Binaries/client/Debug/: Pong.ilk
Binaries/server/Debug/: Server.ilk
src/: Ball.cpp  Ball.h  Block.cpp  Block.h  BrickGame.cpp  BrickGame.h  GameObject.h  Main.cpp  Paddle.cpp  Paddle.h  RenderGame.cpp  RenderGame.h  client.cpp  client.h  server.cpp  server.h
src/Client/: Client.cpp  Client.h
src/Common/: Common.h  InterpolatedPosition.cpp  InterpolatedPosition.h
src/Server/: Game.cpp  Game.h  Player.cpp  Player.h  Server.cpp
